--- a/tour.html
+++ b/tour.html
@@ -16,7 +16,7 @@
 <body>
     <nav>
         <div class="nav-wrapper">
-          <a href="#!" class="brand-logo">Logo</a>
+          <a href="#!" class="brand-logo">AC/DC</a>
           <a href="#" data-target="mobile-demo" class="sidenav-trigger"
             ><i class="material-icons">menu</i></a
           >
@@ -32,8 +32,16 @@
   
 </head>
 <body>
-    
-
+    <p class="text"> No Tour Up Just Yet </p>
+<p>By the graces of the almighty wonderful Lord, one of the best hard rock bands is back, and they’ve brought a whole album full of new music.
+     Yes, AC/DC has returned with a vengeance and all the original members who are still alive are involved. Brian Johnson had his hearing issue
+      addressed and sounds freaking awesome on the new album, Angus Young is still tearing up on lead guitar, Cliff Williams is back on Bass, 
+      Phil Rudd is back behind the drums, and taking the spot of Malcom is his nephew Stevie Young.
+ 
+    The new album is titled POWER UP, or PWRUP as AC/DC first released it as. #PWRUP was the viral hashtag they used to promote it. If you haven’t 
+    listened to any of the songs yet, you’re in for a treat. This is a typical ass kicking AC/DC album, yet it means so much more because no one ever 
+    expected to see the band back together with all the remaining original members. Down below we have each song on the new album, and their music video. 
+    Enjoy AC/DC’s new album PWR UP.</p>
 
 
 
