--- a/musicvideos.html
+++ b/musicvideos.html
@@ -16,7 +16,7 @@
 <body>
     <nav>
         <div class="nav-wrapper">
-          <a href="#!" class="brand-logo">Logo</a>
+          <a href="#!" class="brand-logo">AC/DC</a>
           <a href="#" data-target="mobile-demo" class="sidenav-trigger"
             ><i class="material-icons">menu</i></a
           >
