--- a/about.html
+++ b/about.html
@@ -21,15 +21,24 @@
             ><i class="material-icons">menu</i></a
           >
           <ul class="right hide-on-med-and-down">
-            <li><a href="page1.html">Home</a></li>
-            <li><a href="page2.html">About</a></li>
-            <li><a href="page3.html">Music Videos</a></li>
-            <li><a href="page4.html">Discorgraphy</a></li>
-            <li><a href="page5.html">Tour</a></li>
+            <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="musicvideos.html">Music Videos</a></li>
+                <li><a href="discography.html">Discorgraphy</a></li>
+                <li><a href="tour.html">Tour</a></li>
           </ul>
         </div>
       </nav>
-  
+      <ul class="sidenav" id="mobile-demo">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="musicvideos.html">Music Videos</a></li>
+        <li><a href="discography.html">Discography</a></li>
+        <li><a href="tour.html">Tour</a></li>
+      </ul>
+              
+
+
 </head>
 <body>
     <div class="row">
