--- a/tour.html
+++ b/tour.html
@@ -58,6 +58,18 @@
 
 
 
+  <!--Compiled and minifed jQuery -->
+  <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+  <!-- Compiled and minified JavaScript -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 
+  <script>
+
+
+      $(document).ready(function () {
+          $('.sidenav').sidenav();
+      });
+
+  </script>
 </body>
 </html>
