--- a/musicvideos.html
+++ b/musicvideos.html
@@ -55,12 +55,27 @@
         <iframe width="560" height="315" src="https://www.youtube.com/embed/zakKvbIQ28o" title="YouTube video player" 
         frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                                 <div class="text"><p>AC/DC - You Shook Me All Night Long</p></div>
+    <div class="col"> 
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/UTPKMpX9qPg" title="YouTube video player" 
+      frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                <div class="text"><p>AC/DC - Witch's Spell</p></div>
+      <div class="col"> 
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/nyFvDbwyhF8" title="YouTube video player" 
+        frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                                            <div class="text"><p>AC/DC - Rock the Blues Away</p></div>
+       <iframe width="560" height="315" src="https://www.youtube.com/embed/ga5qfM2-kog" title="YouTube video player"
+        frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                       <div class="text"><p>AC/DC - Realize</p></div>
+         <iframe width="560" height="315" src="https://www.youtube.com/embed/54LEywabkl4" title="YouTube video player" 
+         frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                      <div class="text"><p>AC/DC - Shot In The Dark </p></div>
     </div>
     </div>
+    </div>
 
 
 
-    
+
  <!--Compiled and minifed jQuery -->
  <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
  <!-- Compiled and minified JavaScript -->
