--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
         <div class="col m6 s12">
             <img src="imgs/acdc.jpg" class="responsive-img" alt="">
         </div>
+        
         <div class="col m6 s12">
             <p class="text">AC/DC announce new album POWER UP with classic lineup and release new song ‘Shot in the
                 Dark’</p>
@@ -76,7 +77,12 @@
                 Ice. It was produced by Brendan O’Brien, who worked on both Black Ice and 2014’s Rock or Bust.</p>
         </div>
     </div>
-
+    <div class="col m2 s6"><img src="imgs/facebook.png" alt=""> <p>@AC/DC</p></div>
+    <div class="col m2 s6"> <img src="imgs/instagram.jpg" alt=""> <p>@AC/DC</p></div>
+    <div class="col m2 s6"><img src="imgs/twitter.png" alt=""> <p>@AC/DC</p>
+    </div>
+     
+    </div>
 
 
 
